# skillgap-analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt/skillgap_dbt/: dbt_project.yml  profiles.yml.example
dbt/skillgap_dbt/models/marts/: _marts.yml  dim_offers.sql  dim_tech.sql  fct_tech_mentions_daily.sql  fct_tech_mentions_enriched.sql
dbt/skillgap_dbt/models/staging/: _staging.yml  sources.yml  stg_offers.sql
infra/terraform/: artifact_registry.tf  bigquery.tf  gcs.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/skillgap/: __main__.py  config.py
src/skillgap/ingestion/: auth.py  client.py
src/skillgap/parsing/: __main__.py  llm.py  offre_test.json  pipeline.py  prompt.py  schema.py
src/skillgap/storage/: bronze.py  gcs.py  silver.py
src/skillgap/warehouse/: __init__.py  __main__.py  bq_loader.py
tests/unit/: test_smoke.py
